--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 <!--4th Page About-->
 
-<section class="services" id="services">
+<section class="about" id="about">
     <div class="heading">
         <span>About System</span>
         <h1>Best Customer Experience Reviews</h1>
