--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="form-container">
-            <form action="">
+            <form id="submitted" action="">
                 <div class="input-box">
                     <span>Location</span>
                     <input type="search" name="" id="" placeholder="Search Places">
